# HSE_labs

./: .gitignore  CMakeLists.txt  README.md  test.c
lab-1/: add.c  main.c
lab-2/: add.c  main.c  tests
lab-3/: add.c  main.c
lab-4/: main.c
lab-5/: add.c  main.c  matrices.txt
lab-6/: file_operations.c  file_operations.h  main.c  passenger.c  passenger.h
lab-7/: main.c
lab-e/: main.c
libs/: input.c  input.h  matrix.c  matrix.h  queue.c  queue.h  utils.h
theory/: lab-6.md
